infra/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openpayment-api
  namespace: openpayment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: openpayment-api
  template:
    metadata:
      labels:
        app: openpayment-api
    spec:
      containers:
      - name: api
        image: openpayment/gateway:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
